[metadata]
name = docker-volume-vmax
version = 1.0.0
summary = VMAX Docker Volume Plugin
description-file =
    README.rst
author = Unana Okpoyo
author-email = unana.okpoyo@dell.com
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.0

[files]
data_files =
    etc/systemd/system =
        etc/systemd/system/VMAX_AF.service
        etc/systemd/system/VMAX_AF.socket

[options]
zip_safe = False
scripts =
    bin/inq

